test/bad/classes/method04.px

class Test def
    func f(x: Char = 0): Void def
        skip

Test().f()
